# gpgpu_hf

./: AbstractObject.hpp  CLBuffer.hpp  CLKernel.hpp  CMakeCache.txt  CMakeLists.txt  Camera.cpp  Camera.hpp  ObjLoader.cpp  ObjLoader.hpp  README.md  Sphere.cpp  Sphere.hpp  SpringyObject.cpp  SpringyObject.hpp  VolumeMesh.cpp  VolumeMesh.hpp  clwrapper.cpp  clwrapper.hpp  gpgpu_hf  main.cpp
kernels/: programs.cl
objects/: crossgrid.blend  crossgrid.blend1  gpgpu.blend  gridcube_16.blend  gridcube_4.blend  monkey.blend  monkey_pointcloud.blend  solid_smooth_monkey.blend  sphere.blend
